# ytdl

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  dev.sh  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
docker/: Dockerfile  docker-compose.yml
docs/: install.md
docs/superpowers/plans/: 2026-06-16-ytdl.md
docs/superpowers/specs/: 2026-06-16-ytdl-design.md
scripts/: export-cookies.sh
tests/: conftest.py
tests/e2e/: test_real_youtube.py
tests/integration/: test_crash_recovery.py  test_roundtrip.py
tests/unit/: test_cli.py  test_config.py  test_cookies.py  test_db.py  test_downloader.py  test_events_bus.py  test_library.py  test_playlist.py  test_probe_worker.py  test_queue.py  test_routes_events.py  test_routes_jobs.py  test_routes_library.py  test_routes_preview.py  test_routes_status.py  test_runtime.py  test_ulid.py  test_workers.py
web/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: AutoSubmitBanner.tsx  JobList.tsx  JobRow.tsx  PreviewPanel.tsx  PreviewVideo.tsx  SubmitForm.tsx
web/src/hooks/: useJobsStream.ts
web/tests/: AppAudioOnly.test.tsx  AppAutoSubmit.test.tsx  AppCancelAll.test.tsx  AppCookieStatus.test.tsx  AppDebounce.test.tsx  AppEagerSubmit.test.tsx  AppGranularUpdates.test.tsx  AppOutputDirOverride.test.tsx  AppOutputDirReset.test.tsx  AppPreviewOnPaste.test.tsx  AppStatusFilter.test.tsx  AppSubmitSubtitlesRace.test.tsx  JobRow.test.tsx  PreviewPanel.test.tsx  PreviewVideo.test.tsx  SubmitForm.test.tsx
ytdl/: _probe_worker.py  cli.py  config.py  cookies.py  db.py  downloader.py  events_bus.py  library.py  models.py  queue.py  runtime.py  ulid.py  workers.py
ytdl/api/: __init__.py  routes_events.py  routes_jobs.py  routes_library.py  routes_preview.py  schemas.py
