[project]
name = "ytdl"
version = "0.1.0"
description = "Self-hosted yt-dlp downloader with CLI and web UI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.38",
  "yt-dlp>=2024.12.13",
  "typer>=0.13",
  "httpx>=0.27",
  "rich>=15.0.0",
]

[project.scripts]
ytdl = "ytdl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytdl"]

[dependency-groups]
dev = [
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
  "pytest-httpx>=0.36.2",
  "ruff>=0.15.17",
  "mypy>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
