[project]
name = "ytdl"
version = "0.2.0"
description = "Self-hosted yt-dlp downloader with CLI and web UI"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.138.1",
  "uvicorn[standard]>=0.49.0",
  "sqlmodel>=0.0.39",
  "yt-dlp>=2026.7.4",
  # PO token provider plugin for yt-dlp. Auto-discovered by yt-dlp once
  # installed; supplies Proof-of-Origin tokens via the bgutil sidecar so
  # YouTube's anti-bot gate can be cleared where cookies alone return
  # LOGIN_REQUIRED. Keep the major/minor aligned with the sidecar image tag
  # in docker/docker-compose.yml.
  "bgutil-ytdlp-pot-provider>=1.3.1,<2",
  "typer>=0.26.7",
  "httpx>=0.28.1",
  "rich>=15.0.0",
]

[project.scripts]
ytdl = "ytdl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytdl"]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-httpx>=0.36.2",
  "ruff>=0.15.21",
  "mypy>=2.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
